--- a/pkgs/development/julia-modules/README.org
+++ b/pkgs/development/julia-modules/README.org
@@ -4,7 +4,7 @@
     with import <nixpkgs> { };
   #+END_SRC
 * runtests.sh
-* install.sh
+* TODO install.sh
   #+BEGIN_SRC sh :tangle install.sh
     #1 /ust/bin/env sh
     echo "Overwriting pkgs/development/julia-modules/default.nix"
@@ -15,13 +15,14 @@
     echo "pkgs/top-level/all-packages.nix."
   #+END_SRC
 * tests
-** script
+** TODO script
    #+BEGIN_SRC julia :tangle tests/script
      #! /usr/bin/nix-shell
      #!
      @test 1 == 1
    #+END_SRC
-** shell.nix
+** DONE shell.nix
+   - State "DONE"       from              [2017-08-05 Sat 17:59]
    #+BEGIN_SRC nix :tangle tests/shell.nix
      let
        pkgs = import <nixpkgs> {};
@@ -32,61 +33,53 @@
 	 version = "1";
 	 src = if pkgs.lib.inNixShell then null else nix;
 
-	 # pkgs.rPackages
-	 buildInputs = with rPackages; [
-	   R
-	   ggplot2
-	   knitr
+	 # pkgs.juliaPackages
+	 buildInputs = with juliaPackages; [
+	   julia
 	 ];
        };
      }
    #+END_SRC
 * Julia                                                             :nixroot:
 ** top-level
-*** all-packages.nix
+*** DONE all-packages.nix
+    - State "DONE"       from              [2017-08-05 Sat 18:05]
     #+BEGIN_SRC nix :tangle pkgs/top-level/all-definitions.nix
 
-	R = callPackage ../applications/science/math/R {
-	  # TODO: split docs into a separate output
-	  texLive = texlive.combine {
-	    inherit (texlive) scheme-small inconsolata helvetic texinfo fancyvrb cm-super;
-	  };
-	  openblas = openblasCompat;
-	  withRecommendedPackages = false;
-	  inherit (darwin.apple_sdk.frameworks) Cocoa Foundation;
-	  inherit (darwin) cf-private libobjc;
-	};
+      julia = callPackage ../development/compilers/julia {
+	# TODO: split docs into a separate output
+	openblas = openblasCompat;
+	withRecommendedPackages = false;
+      };
 
-	rWrapper = callPackage ../development/r-modules/wrapper.nix {
-	  recommendedPackages = with rPackages; [
-	    boot class cluster codetools foreign KernSmooth lattice MASS
-	    Matrix mgcv nlme nnet rpart spatial survival
-	  ];
-	  # Override this attribute to register additional libraries.
-	  packages = [];
-	};
+      juliaWrapper = callPackage ../development/julia-modules/wrapper.nix {
+	recommendedPackages = with juliaPackages; [
+	  # BinDeps
+	];
+	# Override this attribute to register additional libraries.
+	packages = [];
+      };
 
-	rPackages = callPackage ../development/r-modules {
-	  overrides = (config.rPackageOverrides or (p: {})) pkgs;
-	};
+      juliaPackages = callPackage ../development/julia-modules {
+	overrides = (config.juliaPackageOverrides or (p: {})) pkgs;
+      };
 
     #+END_SRC
-*** julia-packages.nix
 ** development
 *** julia-modules
-**** default.nix
+**** TODO default.nix
      #+BEGIN_SRC nix :tangle default.nix
        /* This file defines the composition for CRAN (R) packages. */
 
-       { R, pkgs, overrides }:
+       { julia, pkgs, overrides }:
 
        let
 	 inherit (pkgs) fetchurl stdenv lib;
 
-	 buildRPackage = pkgs.callPackage ./generic-builder.nix {
-	   inherit R;
-	   inherit (pkgs.darwin.apple_sdk.frameworks) Cocoa Foundation;
-	   inherit (pkgs) gettext gfortran;
+	 buildJuliaPackage = pkgs.callPackage ./generic-builder.nix {
+	   inherit julia;
+	   # inherit (pkgs.darwin.apple_sdk.frameworks) Cocoa Foundation;
+	   # inherit (pkgs) gettext gfortran;
 	 };
 
 	 # Generates package templates given per-repository settings
@@ -96,22 +89,24 @@
 	 mkDerive = {mkHomepage, mkUrls}: args:
 	     lib.makeOverridable ({
 	       name, version, sha256,
+	       rev, owner, repo,
 	       depends ? [],
 	       doCheck ? true,
 	       requireX ? false,
 	       broken ? false,
-	       hydraPlatforms ? R.meta.hydraPlatforms
-	     }: buildRPackage {
+	       hydraPlatforms ? julia.meta.hydraPlatforms
+	     }: buildJuliaPackage {
 	   name = "${name}-${version}";
-	   src = fetchurl {
+	   src = fetchFromGitHub {
 	     inherit sha256;
-	     urls = mkUrls (args // { inherit name version; });
+	     (args // { inherit owner repo rev; });
+	     # urls = mkUrls (args // { inherit name version; });
 	   };
 	   inherit doCheck requireX;
 	   propagatedBuildInputs = depends;
 	   nativeBuildInputs = depends;
 	   meta.homepage = mkHomepage (args // { inherit name; });
-	   meta.platforms = R.meta.platforms;
+	   meta.platforms = julia.meta.platforms;
 	   meta.hydraPlatforms = hydraPlatforms;
 	   meta.broken = broken;
 	 });
@@ -119,21 +114,17 @@
 	 # Templates for generating Bioconductor and CRAN packages
 	 # from the name, version, sha256, and optional per-package arguments above
 	 #
-	 deriveBioc = mkDerive {
-	   mkHomepage = {name, rVersion}: "https://bioconductor.org/packages/${rVersion}/bioc/html/${name}.html";
-	   mkUrls = {name, version, rVersion}: [ "mirror://bioc/${rVersion}/bioc/src/contrib/${name}_${version}.tar.gz" ];
-	 };
-	 deriveBiocAnn = mkDerive {
-	   mkHomepage = {name, rVersion}: "http://www.bioconductor.org/packages/${name}.html";
-	   mkUrls = {name, version, rVersion}: [ "mirror://bioc/${rVersion}/data/annotation/src/contrib/${name}_${version}.tar.gz" ];
-	 };
-	 deriveBiocExp = mkDerive {
-	   mkHomepage = {name, rVersion}: "http://www.bioconductor.org/packages/${name}.html";
-	   mkUrls = {name, version, rVersion}: [ "mirror://bioc/${rVersion}/data/experiment/src/contrib/${name}_${version}.tar.gz" ];
-	 };
-	 deriveCran = mkDerive {
-	   mkHomepage = {name, snapshot}: "http://mran.revolutionanalytics.com/snapshot/${snapshot}/web/packages/${name}/";
-	   mkUrls = {name, version, snapshot}: [ "http://mran.revolutionanalytics.com/snapshot/${snapshot}/src/contrib/${name}_${version}.tar.gz" ];
+	 # deriveBioc = mkDerive {
+	 #   mkHomepage = {name, juliaVersion}:
+	 #   "https://bioconductor.org/packages/${juliaVersion}/bioc/html/${name}.html";
+	 #   mkUrls = {name, version, juliaVersion}:
+	 #   [ "mirror://bioc/${juliaVersion}/bioc/src/contrib/${name}_${version}.tar.gz" ];
+	 # };
+	 deriveGH = mkDerive {
+	   mkHomepage = {owner, repo, rev}:
+	   "https://github.com/${owner}/${repo}";
+	   mkUrls = {owner, repo, rev}:
+	   [ "https://github.com/${owner}/${repo}/archive/${rev}.tar.gz" ];
 	 };
 
 	 # Overrides package definitions with nativeBuildInputs.
@@ -178,10 +169,10 @@
 	     })
 	   ) overrides;
 
-	 # Overrides package definitions with new R dependencies.
+	 # Overrides package definitions with new Julia dependencies.
 	 # For example,
 	 #
-	 # overrideRDepends {
+	 # overrideJuliaDepends {
 	 #   foo = [ self.bar ]
 	 # } old
 	 #
@@ -193,7 +184,7 @@
 	 #     propagatedNativeBuildInputs = attrs.propagatedNativeBuildInputs ++ [ self.bar ];
 	 #   });
 	 # }
-	 overrideRDepends = overrides: old:
+	 overrideJuliaDepends = overrides: old:
 	   lib.mapAttrs (name: value:
 	     (builtins.getAttr name old).overrideDerivation (attrs: {
 	       nativeBuildInputs = attrs.nativeBuildInputs ++ value;
@@ -281,7 +272,7 @@
 	   let
 	     old1 = old0 // (overrideRequireX packagesRequireingX old0);
 	     old2 = old1 // (overrideSkipCheck packagesToSkipCheck old1);
-	     old3 = old2 // (overrideRDepends packagesWithRDepends old2);
+	     old3 = old2 // (overrideJuliaDepends packagesWithJuliaDepends old2);
 	     old4 = old3 // (overrideNativeBuildInputs packagesWithNativeBuildInputs old3);
 	     old5 = old4 // (overrideBuildInputs packagesWithBuildInputs old4);
 	     old6 = old5 // (overrideBroken brokenPackages old5);
@@ -293,651 +284,94 @@
 	 # `self` is `_self` with overridden packages;
 	 # packages in `_self` may depends on overridden packages.
 	 self = (defaultOverrides _self self) // overrides;
-	 _self = import ./bioc-packages.nix { inherit self; derive = deriveBioc; } //
-		 import ./bioc-annotation-packages.nix { inherit self; derive = deriveBiocAnn; } //
-		 import ./bioc-experiment-packages.nix { inherit self; derive = deriveBiocExp; } //
-		 import ./cran-packages.nix { inherit self; derive = deriveCran; };
+	 _self = import ./julia-packages.nix { inherit self; derive = deriveBioc; }
 
 	 # tweaks for the individual packages and "in self" follow
 
-	 packagesWithRDepends = {
-	   FactoMineR = [ self.car ];
-	   pander = [ self.codetools ];
+	 packagesWithJuliaDepends = {
+	   # FactoMineR = [ self.car ];
+	   # pander = [ self.codetools ];
 	 };
 
 	 packagesWithNativeBuildInputs = {
-	   abn = [ pkgs.gsl_1 ];
-	   adimpro = [ pkgs.imagemagick ];
-	   audio = [ pkgs.portaudio ];
-	   BayesSAE = [ pkgs.gsl_1 ];
-	   BayesVarSel = [ pkgs.gsl_1 ];
-	   BayesXsrc = [ pkgs.readline.dev pkgs.ncurses ];
-	   bigGP = [ pkgs.openmpi ];
-	   bio3d = [ pkgs.zlib ];
-	   BiocCheck = [ pkgs.which ];
-	   Biostrings = [ pkgs.zlib ];
-	   bnpmr = [ pkgs.gsl_1 ];
-	   cairoDevice = [ pkgs.gtk2.dev ];
-	   Cairo = [ pkgs.libtiff pkgs.libjpeg pkgs.cairo.dev pkgs.x11 pkgs.fontconfig.lib ];
-	   Cardinal = [ pkgs.which ];
-	   chebpol = [ pkgs.fftw ];
-	   ChemmineOB = [ pkgs.openbabel pkgs.pkgconfig ];
-	   cit = [ pkgs.gsl_1 ];
-	   curl = [ pkgs.curl.dev ];
-	   devEMF = [ pkgs.xorg.libXft.dev pkgs.x11 ];
-	   diversitree = [ pkgs.gsl_1 pkgs.fftw ];
-	   EMCluster = [ pkgs.liblapack ];
-	   fftw = [ pkgs.fftw.dev ];
-	   fftwtools = [ pkgs.fftw.dev ];
-	   Formula = [ pkgs.gmp ];
-	   geoCount = [ pkgs.gsl_1 ];
-	   git2r = [ pkgs.zlib.dev pkgs.openssl.dev ];
-	   GLAD = [ pkgs.gsl_1 ];
-	   glpkAPI = [ pkgs.gmp pkgs.glpk ];
-	   gmp = [ pkgs.gmp.dev ];
-	   graphscan = [ pkgs.gsl_1 ];
-	   gsl = [ pkgs.gsl_1 ];
-	   h5 = [ pkgs.hdf5-cpp pkgs.which ];
-	   h5vc = [ pkgs.zlib.dev ];
-	   HiCseg = [ pkgs.gsl_1 ];
-	   imager = [ pkgs.x11 ];
-	   iBMQ = [ pkgs.gsl_1 ];
-	   igraph = [ pkgs.gmp ];
-	   JavaGD = [ pkgs.jdk ];
-	   jpeg = [ pkgs.libjpeg.dev ];
-	   KFKSDS = [ pkgs.gsl_1 ];
-	   kza = [ pkgs.fftw.dev ];
-	   libamtrack = [ pkgs.gsl_1 ];
-	   mixcat = [ pkgs.gsl_1 ];
-	   mvabund = [ pkgs.gsl_1 ];
-	   mwaved = [ pkgs.fftw.dev ];
-	   ncdf4 = [ pkgs.netcdf ];
-	   nloptr = [ pkgs.nlopt ];
-	   openssl = [ pkgs.openssl.dev ];
-	   outbreaker = [ pkgs.gsl_1 ];
-	   pander = [ pkgs.pandoc pkgs.which ];
-	   pbdMPI = [ pkgs.openmpi ];
-	   pbdNCDF4 = [ pkgs.netcdf ];
-	   pbdPROF = [ pkgs.openmpi ];
-	   pbdZMQ = [ pkgs.which ];
-	   PKI = [ pkgs.openssl.dev ];
-	   png = [ pkgs.libpng.dev ];
-	   PopGenome = [ pkgs.zlib.dev ];
-	   proj4 = [ pkgs.proj ];
-	   qtbase = [ pkgs.qt4 ];
-	   qtpaint = [ pkgs.qt4 ];
-	   R2GUESS = [ pkgs.gsl_1 ];
-	   R2SWF = [ pkgs.zlib pkgs.libpng pkgs.freetype.dev ];
-	   RAppArmor = [ pkgs.libapparmor ];
-	   rapportools = [ pkgs.which ];
-	   rapport = [ pkgs.which ];
-	   rbamtools = [ pkgs.zlib.dev ];
-	   rcdd = [ pkgs.gmp.dev ];
-	   RcppCNPy = [ pkgs.zlib.dev ];
-	   RcppGSL = [ pkgs.gsl_1 ];
-	   RcppOctave = [ pkgs.zlib pkgs.bzip2.dev pkgs.icu pkgs.lzma.dev pkgs.pcre.dev pkgs.octave ];
-	   RcppZiggurat = [ pkgs.gsl_1 ];
-	   rgdal = [ pkgs.proj pkgs.gdal ];
-	   rgeos = [ pkgs.geos ];
-	   rggobi = [ pkgs.ggobi pkgs.gtk2.dev pkgs.libxml2.dev ];
-	   rgl = [ pkgs.mesa pkgs.xlibsWrapper ];
-	   Rglpk = [ pkgs.glpk ];
-	   RGtk2 = [ pkgs.gtk2.dev ];
-	   rhdf5 = [ pkgs.zlib ];
-	   Rhpc = [ pkgs.zlib pkgs.bzip2.dev pkgs.icu pkgs.lzma.dev pkgs.openmpi pkgs.pcre.dev ];
-	   Rhtslib = [ pkgs.zlib.dev ];
-	   RJaCGH = [ pkgs.zlib.dev ];
-	   rjags = [ pkgs.jags ];
-	   rJava = [ pkgs.zlib pkgs.bzip2.dev pkgs.icu pkgs.lzma.dev pkgs.pcre.dev pkgs.jdk pkgs.libzip ];
-	   Rlibeemd = [ pkgs.gsl_1 ];
-	   rmatio = [ pkgs.zlib.dev ];
-	   Rmpfr = [ pkgs.gmp pkgs.mpfr.dev ];
-	   Rmpi = [ pkgs.openmpi ];
-	   RMySQL = [ pkgs.zlib pkgs.mysql.lib ];
-	   RNetCDF = [ pkgs.netcdf pkgs.udunits ];
-	   RODBCext = [ pkgs.libiodbc ];
-	   RODBC = [ pkgs.libiodbc ];
-	   rpg = [ pkgs.postgresql ];
-	   rphast = [ pkgs.pcre.dev pkgs.zlib pkgs.bzip2 pkgs.gzip pkgs.readline ];
-	   Rpoppler = [ pkgs.poppler ];
-	   RPostgreSQL = [ pkgs.postgresql ];
-	   RProtoBuf = [ pkgs.protobuf ];
-	   rPython = [ pkgs.python ];
-	   RSclient = [ pkgs.openssl.dev ];
-	   Rserve = [ pkgs.openssl ];
-	   Rssa = [ pkgs.fftw.dev ];
-	   rtfbs = [ pkgs.zlib pkgs.pcre.dev pkgs.bzip2 pkgs.gzip pkgs.readline ];
-	   rtiff = [ pkgs.libtiff.dev ];
-	   runjags = [ pkgs.jags ];
-	   RVowpalWabbit = [ pkgs.zlib.dev pkgs.boost ];
-	   rzmq = [ pkgs.zeromq3 ];
-	   SAVE = [ pkgs.zlib pkgs.bzip2 pkgs.icu pkgs.lzma pkgs.pcre ];
-	   sdcTable = [ pkgs.gmp pkgs.glpk ];
-	   seewave = [ pkgs.fftw.dev pkgs.libsndfile.dev ];
-	   seqinr = [ pkgs.zlib.dev ];
-	   seqminer = [ pkgs.zlib.dev pkgs.bzip2 ];
-	   showtext = [ pkgs.zlib pkgs.libpng pkgs.icu pkgs.freetype.dev ];
-	   simplexreg = [ pkgs.gsl_1 ];
-	   SOD = [ pkgs.opencl-headers ];
-	   spate = [ pkgs.fftw.dev ];
-	   sprint = [ pkgs.openmpi ];
-	   ssanv = [ pkgs.proj ];
-	   stsm = [ pkgs.gsl_1 ];
-	   stringi = [ pkgs.icu.dev ];
-	   survSNP = [ pkgs.gsl_1 ];
-	   sysfonts = [ pkgs.zlib pkgs.libpng pkgs.freetype.dev ];
-	   TAQMNGR = [ pkgs.zlib.dev ];
-	   tiff = [ pkgs.libtiff.dev ];
-	   TKF = [ pkgs.gsl_1 ];
-	   tkrplot = [ pkgs.xorg.libX11 pkgs.tk.dev ];
-	   topicmodels = [ pkgs.gsl_1 ];
-	   udunits2 = [ pkgs.udunits pkgs.expat ];
-	   V8 = [ pkgs.v8 ];
-	   VBLPCM = [ pkgs.gsl_1 ];
-	   VBmix = [ pkgs.gsl_1 pkgs.fftw pkgs.qt4 ];
-	   WhopGenome = [ pkgs.zlib.dev ];
-	   XBRL = [ pkgs.zlib pkgs.libxml2.dev ];
-	   xml2 = [ pkgs.libxml2.dev ];
-	   XML = [ pkgs.libtool pkgs.libxml2.dev pkgs.xmlsec pkgs.libxslt ];
-	   affyPLM = [ pkgs.zlib.dev ];
-	   bamsignals = [ pkgs.zlib.dev ];
-	   BitSeq = [ pkgs.zlib.dev ];
-	   DiffBind = [ pkgs.zlib ];
-	   ShortRead = [ pkgs.zlib.dev ];
-	   oligo = [ pkgs.zlib.dev ];
-	   gmapR = [ pkgs.zlib.dev ];
-	   Rsubread = [ pkgs.zlib.dev ];
-	   XVector = [ pkgs.zlib.dev ];
-	   Rsamtools = [ pkgs.zlib.dev ];
-	   rtracklayer = [ pkgs.zlib.dev ];
-	   affyio = [ pkgs.zlib.dev ];
-	   VariantAnnotation = [ pkgs.zlib.dev ];
-	   snpStats = [ pkgs.zlib.dev ];
-	   gputools = [ pkgs.pcre.dev pkgs.lzma.dev pkgs.zlib.dev pkgs.bzip2.dev pkgs.icu.dev ];
+	   # adimpro = [ pkgs.imagemagick ];
+	   # gputools = [ pkgs.pcre.dev pkgs.lzma.dev pkgs.zlib.dev
+	   #              pkgs.bzip2.dev pkgs.icu.dev ];
 	 };
 
 	 packagesWithBuildInputs = {
 	   # sort -t '=' -k 2
-	   svKomodo = [ pkgs.which ];
-	   nat = [ pkgs.which ];
-	   nat_nblast = [ pkgs.which ];
-	   nat_templatebrains = [ pkgs.which ];
-	   RMark = [ pkgs.which ];
-	   RPushbullet = [ pkgs.which ];
-	   qtpaint = [ pkgs.cmake ];
-	   qtbase = [ pkgs.cmake pkgs.perl ];
-	   gmatrix = [ pkgs.cudatoolkit pkgs.which ];
-	   RCurl = [ pkgs.curl.dev ];
-	   R2SWF = [ pkgs.pkgconfig ];
-	   rggobi = [ pkgs.pkgconfig ];
-	   RGtk2 = [ pkgs.pkgconfig ];
-	   RProtoBuf = [ pkgs.pkgconfig ];
-	   Rpoppler = [ pkgs.pkgconfig ];
-	   VBmix = [ pkgs.pkgconfig ];
-	   XML = [ pkgs.pkgconfig ];
-	   cairoDevice = [ pkgs.pkgconfig ];
-	   chebpol = [ pkgs.pkgconfig ];
-	   fftw = [ pkgs.pkgconfig ];
-	   geoCount = [ pkgs.pkgconfig ];
-	   kza = [ pkgs.pkgconfig ];
-	   mwaved = [ pkgs.pkgconfig ];
-	   showtext = [ pkgs.pkgconfig ];
-	   spate = [ pkgs.pkgconfig ];
-	   stringi = [ pkgs.pkgconfig ];
-	   sysfonts = [ pkgs.pkgconfig ];
-	   Cairo = [ pkgs.pkgconfig ];
-	   Rsymphony = [ pkgs.pkgconfig pkgs.doxygen pkgs.graphviz pkgs.subversion ];
-	   qtutils = [ pkgs.qt4 ];
-	   tcltk2 = [ pkgs.tcl pkgs.tk ];
-	   tikzDevice = [ pkgs.which pkgs.texlive.combined.scheme-medium ];
-	   rPython = [ pkgs.which ];
-	   gridGraphics = [ pkgs.which ];
-	   gputools = [ pkgs.which pkgs.cudatoolkit ];
-	   adimpro = [ pkgs.which pkgs.xorg.xdpyinfo ];
-	   PET = [ pkgs.which pkgs.xorg.xdpyinfo pkgs.imagemagick ];
-	   dti = [ pkgs.which pkgs.xorg.xdpyinfo pkgs.imagemagick ];
-	   mzR = [ pkgs.netcdf ];
+	   # Cairo = [ pkgs.pkgconfig ];
+	   # Rsymphony = [ pkgs.pkgconfig pkgs.doxygen pkgs.graphviz pkgs.subversion ];
 	 };
 
 	 packagesRequireingX = [
-	   "accrual"
-	   "ade4TkGUI"
-	   "adehabitat"
-	   "analogue"
-	   "analogueExtra"
-	   "AnalyzeFMRI"
-	   "AnnotLists"
-	   "AnthropMMD"
-	   "aplpack"
-	   "aqfig"
-	   "arf3DS4"
-	   "asbio"
-	   "AtelieR"
-	   "BAT"
-	   "bayesDem"
-	   "BCA"
-	   "BEQI2"
-	   "betapart"
-	   "betaper"
-	   "BiodiversityR"
-	   "BioGeoBEARS"
-	   "bio_infer"
-	   "bipartite"
-	   "biplotbootGUI"
-	   "blender"
-	   "cairoDevice"
-	   "CCTpack"
-	   "cncaGUI"
-	   "cocorresp"
-	   "CommunityCorrelogram"
-	   "confidence"
-	   "constrainedKriging"
-	   "ConvergenceConcepts"
-	   "cpa"
-	   "DALY"
-	   "dave"
-	   "debug"
-	   "Deducer"
-	   "DeducerExtras"
-	   "DeducerPlugInExample"
-	   "DeducerPlugInScaling"
-	   "DeducerSpatial"
-	   "DeducerSurvival"
-	   "DeducerText"
-	   "Demerelate"
-	   "detrendeR"
-	   "dgmb"
-	   "DivMelt"
-	   "dpa"
-	   "DSpat"
-	   "dynamicGraph"
-	   "dynBiplotGUI"
-	   "EasyqpcR"
-	   "EcoVirtual"
-	   "ENiRG"
-	   "EnQuireR"
-	   "eVenn"
-	   "exactLoglinTest"
-	   "FAiR"
-	   "fat2Lpoly"
-	   "fbati"
-	   "FD"
-	   "feature"
-	   "FeedbackTS"
-	   "FFD"
-	   "fgui"
-	   "fisheyeR"
-	   "fit4NM"
-	   "forams"
-	   "forensim"
-	   "FreeSortR"
-	   "fscaret"
-	   "fSRM"
-	   "gcmr"
-	   "GeoGenetix"
-	   "geomorph"
-	   "geoR"
-	   "geoRglm"
-	   "georob"
-	   "GeoXp"
-	   "GGEBiplotGUI"
-	   "gnm"
-	   "GPCSIV"
-	   "GrammR"
-	   "GrapheR"
-	   "GroupSeq"
-	   "gsubfn"
-	   "GUniFrac"
-	   "gWidgets2RGtk2"
-	   "gWidgets2tcltk"
-	   "gWidgetsRGtk2"
-	   "gWidgetstcltk"
-	   "HH"
-	   "HiveR"
-	   "HomoPolymer"
-	   "iBUGS"
-	   "ic50"
-	   "iDynoR"
-	   "in2extRemes"
-	   "iplots"
-	   "isopam"
-	   "IsotopeR"
-	   "JGR"
-	   "KappaGUI"
-	   "likeLTD"
-	   "logmult"
-	   "LS2Wstat"
-	   "MAR1"
-	   "MareyMap"
-	   "memgene"
-	   "MergeGUI"
-	   "metacom"
-	   "Meth27QC"
-	   "MetSizeR"
-	   "MicroStrategyR"
-	   "migui"
-	   "miniGUI"
-	   "MissingDataGUI"
-	   "mixsep"
-	   "mlDNA"
-	   "MplusAutomation"
-	   "mpmcorrelogram"
-	   "mritc"
-	   "MTurkR"
-	   "multgee"
-	   "multibiplotGUI"
-	   "nodiv"
-	   "OligoSpecificitySystem"
-	   "onemap"
-	   "OpenRepGrid"
-	   "palaeoSig"
-	   "paleoMAS"
-	   "pbatR"
-	   "PBSadmb"
-	   "PBSmodelling"
-	   "PCPS"
-	   "pez"
-	   "phylotools"
-	   "picante"
-	   "PKgraph"
-	   "playwith"
-	   "plotSEMM"
-	   "plsRbeta"
-	   "plsRglm"
-	   "PopGenReport"
-	   "poppr"
-	   "powerpkg"
-	   "PredictABEL"
-	   "prefmod"
-	   "PrevMap"
-	   "ProbForecastGOP"
-	   "QCAGUI"
-	   "qtbase"
-	   "qtpaint"
-	   "qtutils"
-	   "R2STATS"
-	   "r4ss"
-	   "RandomFields"
-	   "rareNMtests"
-	   "rAverage"
-	   "Rcmdr"
-	   "RcmdrPlugin_BCA"
-	   "RcmdrPlugin_coin"
-	   "RcmdrPlugin_depthTools"
-	   "RcmdrPlugin_DoE"
-	   "RcmdrPlugin_doex"
-	   "RcmdrPlugin_EACSPIR"
-	   "RcmdrPlugin_EBM"
-	   "RcmdrPlugin_EcoVirtual"
-	   "RcmdrPlugin_epack"
-	   "RcmdrPlugin_EZR"
-	   "RcmdrPlugin_FactoMineR"
-	   "RcmdrPlugin_HH"
-	   "RcmdrPlugin_IPSUR"
-	   "RcmdrPlugin_KMggplot2"
-	   "RcmdrPlugin_lfstat"
-	   "RcmdrPlugin_MA"
-	   "RcmdrPlugin_mosaic"
-	   "RcmdrPlugin_MPAStats"
-	   "RcmdrPlugin_orloca"
-	   "RcmdrPlugin_plotByGroup"
-	   "RcmdrPlugin_pointG"
-	   "RcmdrPlugin_qual"
-	   "RcmdrPlugin_ROC"
-	   "RcmdrPlugin_sampling"
-	   "RcmdrPlugin_SCDA"
-	   "RcmdrPlugin_SLC"
-	   "RcmdrPlugin_SM"
-	   "RcmdrPlugin_sos"
-	   "RcmdrPlugin_steepness"
-	   "RcmdrPlugin_survival"
-	   "RcmdrPlugin_TeachingDemos"
-	   "RcmdrPlugin_temis"
-	   "RcmdrPlugin_UCA"
-	   "recluster"
-	   "relax"
-	   "relimp"
-	   "RenextGUI"
-	   "reportRx"
-	   "reshapeGUI"
-	   "rgl"
-	   "RHRV"
-	   "rich"
-	   "rioja"
-	   "ripa"
-	   "rite"
-	   "RNCEP"
-	   "RQDA"
-	   "RSDA"
-	   "rsgcc"
-	   "RSurvey"
-	   "RunuranGUI"
-	   "sharpshootR"
-	   "simba"
-	   "Simile"
-	   "SimpleTable"
-	   "SOLOMON"
-	   "soundecology"
-	   "SPACECAP"
-	   "spacodiR"
-	   "spatsurv"
-	   "sqldf"
-	   "SRRS"
-	   "SSDforR"
-	   "statcheck"
-	   "StatDA"
-	   "STEPCAM"
-	   "stosim"
-	   "strvalidator"
-	   "stylo"
-	   "svDialogstcltk"
-	   "svIDE"
-	   "svSocket"
-	   "svWidgets"
-	   "SYNCSA"
-	   "SyNet"
-	   "tcltk2"
-	   "TED"
-	   "TestScorer"
-	   "TIMP"
-	   "titan"
-	   "tkrgl"
-	   "tkrplot"
-	   "tmap"
-	   "tspmeta"
-	   "TTAinterfaceTrendAnalysis"
-	   "twiddler"
-	   "vcdExtra"
-	   "VecStatGraphs3D"
-	   "vegan"
-	   "vegan3d"
-	   "vegclust"
-	   "VIMGUI"
-	   "WMCapacity"
-	   "x12GUI"
-	   "xergm"
+	   # "xergm"
 	 ];
 
 	 packagesToSkipCheck = [
-	   "Rmpi"     # tries to run MPI processes
-	   "gmatrix"  # requires CUDA runtime
-	   "gputools" # requires CUDA runtime
-	   "sprint"   # tries to run MPI processes
-	   "pbdMPI"   # tries to run MPI processes
+	   # "gputools" # requires CUDA runtime
 	 ];
 
 	 # Packages which cannot be installed due to lack of dependencies or other reasons.
 	 brokenPackages = [
-	   "gputools"                        # depends on non-free cudatoolkit-8.0.61
-	   "gmatrix"                         # depends on non-free cudatoolkit-8.0.61
+	   # "gputools"                        # depends on non-free cudatoolkit-8.0.61
 	 ];
 
 	 otherOverrides = old: new: {
-	   stringi = old.stringi.overrideDerivation (attrs: {
-	     postInstall = let
-	       icuName = "icudt52l";
-	       icuSrc = pkgs.fetchzip {
-		 url = "http://static.rexamine.com/packages/${icuName}.zip";
-		 sha256 = "0hvazpizziq5ibc9017i1bb45yryfl26wzfsv05vk9mc1575r6xj";
-		 stripRoot = false;
-	       };
-	       in ''
-		 ${attrs.postInstall or ""}
-		 cp ${icuSrc}/${icuName}.dat $out/library/stringi/libs
-	       '';
-	   });
 
-	   xml2 = old.xml2.overrideDerivation (attrs: {
-	     preConfigure = ''
-	       export LIBXML_INCDIR=${pkgs.libxml2.dev}/include/libxml2
-	       patchShebangs configure
-	       '';
-	   });
+	   # Cairo = old.Cairo.overrideDerivation (attrs: {
+	   #   NIX_LDFLAGS = "-lfontconfig";
+	   # });
 
-	   Cairo = old.Cairo.overrideDerivation (attrs: {
-	     NIX_LDFLAGS = "-lfontconfig";
-	   });
+	   # curl = old.curl.overrideDerivation (attrs: {
+	   #   preConfigure = "patchShebangs configure";
+	   # });
 
-	   curl = old.curl.overrideDerivation (attrs: {
-	     preConfigure = "patchShebangs configure";
-	   });
+	   # BayesXsrc = old.BayesXsrc.overrideDerivation (attrs: {
+	   #   patches = [ ./patches/BayesXsrc.patch ];
+	   # });
 
-	   RcppArmadillo = old.RcppArmadillo.overrideDerivation (attrs: {
-	     patchPhase = "patchShebangs configure";
-	   });
-
-	   rpf = old.rpf.overrideDerivation (attrs: {
-	     patchPhase = "patchShebangs configure";
-	   });
-
-	   BayesXsrc = old.BayesXsrc.overrideDerivation (attrs: {
-	     patches = [ ./patches/BayesXsrc.patch ];
-	   });
-
-	   rJava = old.rJava.overrideDerivation (attrs: {
-	     preConfigure = ''
-	       export JAVA_CPPFLAGS=-I${pkgs.jdk}/include/
-	       export JAVA_HOME=${pkgs.jdk}
-	     '';
-	   });
-
-	   JavaGD = old.JavaGD.overrideDerivation (attrs: {
-	     preConfigure = ''
-	       export JAVA_CPPFLAGS=-I${pkgs.jdk}/include/
-	       export JAVA_HOME=${pkgs.jdk}
-	     '';
-	   });
-
-	   Mposterior = old.Mposterior.overrideDerivation (attrs: {
-	     PKG_LIBS = "-L${pkgs.openblasCompat}/lib -lopenblas";
-	   });
-
-	   qtbase = old.qtbase.overrideDerivation (attrs: {
-	     patches = [ ./patches/qtbase.patch ];
-	   });
-
-	   Rmpi = old.Rmpi.overrideDerivation (attrs: {
-	     configureFlags = [
-	       "--with-Rmpi-type=OPENMPI"
-	     ];
-	   });
-
-	   Rmpfr = old.Rmpfr.overrideDerivation (attrs: {
-	     configureFlags = [
-	       "--with-mpfr-include=${pkgs.mpfr.dev}/include"
-	     ];
-	   });
-
-	   RVowpalWabbit = old.RVowpalWabbit.overrideDerivation (attrs: {
-	     configureFlags = [
-	       "--with-boost=${pkgs.boost.dev}" "--with-boost-libdir=${pkgs.boost.out}/lib"
-	     ];
-	   });
-
-	   RAppArmor = old.RAppArmor.overrideDerivation (attrs: {
-	     patches = [ ./patches/RAppArmor.patch ];
-	     LIBAPPARMOR_HOME = "${pkgs.libapparmor}";
-	   });
-
-	   RMySQL = old.RMySQL.overrideDerivation (attrs: {
-	     patches = [ ./patches/RMySQL.patch ];
-	     MYSQL_DIR="${pkgs.mysql.lib}";
-	   });
-
-	   devEMF = old.devEMF.overrideDerivation (attrs: {
-	     NIX_CFLAGS_LINK = "-L${pkgs.xorg.libXft.out}/lib -lXft";
-	     NIX_LDFLAGS = "-lX11";
-	   });
-
-	   slfm = old.slfm.overrideDerivation (attrs: {
-	     PKG_LIBS = "-L${pkgs.openblasCompat}/lib -lopenblas";
-	   });
-
-	   SamplerCompare = old.SamplerCompare.overrideDerivation (attrs: {
-	     PKG_LIBS = "-L${pkgs.openblasCompat}/lib -lopenblas";
-	   });
-
-	   EMCluster = old.EMCluster.overrideDerivation (attrs: {
-	     patches = [ ./patches/EMCluster.patch ];
-	   });
-
-	   spMC = old.spMC.overrideDerivation (attrs: {
-	     patches = [ ./patches/spMC.patch ];
-	   });
-
-	   BayesLogit = old.BayesLogit.overrideDerivation (attrs: {
-	     patches = [ ./patches/BayesLogit.patch ];
-	     buildInputs = (attrs.buildInputs or []) ++ [ pkgs.openblasCompat ];
-	   });
-
-	   BayesBridge = old.BayesBridge.overrideDerivation (attrs: {
-	     patches = [ ./patches/BayesBridge.patch ];
-	   });
-
-	   openssl = old.openssl.overrideDerivation (attrs: {
-	     OPENSSL_INCLUDES = "${pkgs.openssl.dev}/include";
-	   });
-
-	   Rserve = old.Rserve.overrideDerivation (attrs: {
-	     patches = [ ./patches/Rserve.patch ];
-	     configureFlags = [
-	       "--with-server" "--with-client"
-	     ];
-	   });
-
-	   nloptr = old.nloptr.overrideDerivation (attrs: {
-	     configureFlags = [
-	       "--with-nlopt-cflags=-I${pkgs.nlopt}/include"
-	       "--with-nlopt-libs='-L${pkgs.nlopt}/lib -lnlopt_cxx -lm'"
-	     ];
-	   });
-
-	   V8 = old.V8.overrideDerivation (attrs: {
-	     preConfigure = "export V8_INCLUDES=${pkgs.v8}/include";
-	   });
+	   # rJava = old.rJava.overrideDerivation (attrs: {
+	   #   preConfigure = ''
+	   # 	export JAVA_CPPFLAGS=-I${pkgs.jdk}/include/
+	   # 	export JAVA_HOME=${pkgs.jdk}
+	   #   '';
+	   # });
 
 	 };
        in
 	 self
      #+END_SRC
-**** generate-julia-packages.jl
-**** generic-build.nix
+**** TODO generate-julia-packages.jl
+**** DONE julia-packages.nix
+     - State "DONE"       from              [2017-08-05 Sat 19:14]
+     #+BEGIN_SRC nix :tangle julia-packages.nix
+       { self, derive }:
+       let derive2 = derive { snapshot = "2017-06-30"; };
+       in with self; {
+	 # A3 = derive2 { name="A3"; version="1.0.0"; sha256="017hq9pjsv1h9i7cqk5cfx27as54shlhdsdvr6jkhb8jfkpdb6cw"; depends=[pbapply xtable]; };
+       }
+     #+END_SRC
+**** DONE generic-build.nix
+     - State "DONE"       from "TODO"       [2017-08-05 Sat 18:42]
      #+BEGIN_SRC nix :tangle generic-build.nix
-       { stdenv, R, libcxx, xvfb_run, utillinux, Cocoa, Foundation, gettext, gfortran }:
+       # { stdenv, julia, libcxx, xvfb_run, utillinux, Cocoa, Foundation, gettext, gfortran }:
+       { stdenv, julia }:
 
        { name, buildInputs ? [], ... } @ attrs:
 
        stdenv.mkDerivation ({
-	 buildInputs = buildInputs ++ [R] ++
-		       stdenv.lib.optionals attrs.requireX [utillinux xvfb_run] ++
-		       stdenv.lib.optionals stdenv.isDarwin [Cocoa Foundation gettext gfortran];
+	 buildInputs = buildInputs ++ [julia];
+	 # ++ stdenv.lib.optionals attrs.requireX [utillinux xvfb_run]
+	 # ++ stdenv.lib.optionals stdenv.isDarwin [Cocoa Foundation gettext gfortran];
 
-	 NIX_CFLAGS_COMPILE =
-	   stdenv.lib.optionalString stdenv.isDarwin "-I${libcxx}/include/c++/v1";
+	 # NIX_CFLAGS_COMPILE =
+	 #   stdenv.lib.optionalString stdenv.isDarwin "-I${libcxx}/include/c++/v1";
 
 	 configurePhase = ''
 	   runHook preConfigure
-	   export R_LIBS_SITE="$R_LIBS_SITE''${R_LIBS_SITE:+:}$out/library"
+	   export JULIA_LOAD_PATH="$JULIA_LOAD_PATH''${JULIA_LOAD_PATH:+:}$out/src"
 	   runHook postConfigure
 	 '';
 
@@ -946,22 +380,15 @@
 	   runHook postBuild
 	 '';
 
-	 installFlags = if attrs.doCheck or true then
-	   []
-	 else
-	   [ "--no-test-load" ];
-
-	 rCommand = if attrs.requireX or false then
-	   # Unfortunately, xvfb-run has a race condition even with -a option, so that
-	   # we acquire a lock explicitly.
-	   "flock ${xvfb_run} xvfb-run -a -e xvfb-error R"
-	 else
-	   "R";
-
 	 installPhase = ''
 	   runHook preInstall
-	   mkdir -p $out/library
-	   $rCommand CMD INSTALL $installFlags --configure-args="$configureFlags" -l $out/library .
+
+	   mkdir -p $out/src
+	   mkdir -p $out/test
+
+	   cp -r $src/src/* $out/src
+	   cp -r $src/test/* $out/test
+
 	   runHook postInstall
 	 '';
 
@@ -971,41 +398,44 @@
 	   fi
 	 '';
 
-	 checkPhase = ''
-	   # noop since R CMD INSTALL tests packages
+	 doCheck = false;
+	 doInstallCheck = false;
+
+	 installCheck = ''
+	   julia $out/test/runtests.jl
 	 '';
        } // attrs // {
-	 name = "r-" + name;
+	 name = "julia-${name}";
        })
      #+END_SRC
-**** generic-shell.nix
+**** DONE generic-shell.nix
+     - State "DONE"       from              [2017-08-05 Sat 17:59]
      #+BEGIN_SRC nix :tangle generic-shell.nix
        with import ../../.. {};
 
        stdenv.mkDerivation {
-	 name = "generate-r-packages-shell";
+	 name = "generate-julia-packages-shell";
 
 	 buildCommand = "exit 1";
 
 	 buildInputs = [ wget ];
 
 	 nativeBuildInputs = [
-	   (rWrapper.override {
-	     packages = with rPackages; [
-	       data_table
-	       parallel
+	   (juliaWrapper.override {
+	     packages = with juliaPackages; [
 	     ];
 	   })
 	 ];
        }
      #+END_SRC
-**** test-evaluation.nix
+**** DONE test-evaluation.nix
+     - State "DONE"       from              [2017-08-05 Sat 17:56]
      #+BEGIN_SRC nix :tangle test-evaluation.nix
        # Run
        #
        #   nix-build test-evaluation.nix --dry-run
        #
-       # to test whether the R package set evaluates properly.
+       # to test whether the Julia package set evaluates properly.
 
        let
 
@@ -1016,30 +446,31 @@
 
 	 inherit (import ../../.. { inherit config; }) pkgs;
 
-	 rWrapper = pkgs.rWrapper.override {
-	   packages = pkgs.lib.filter pkgs.lib.isDerivation (pkgs.lib.attrValues pkgs.rPackages);
+	 juliaWrapper = pkgs.juliaWrapper.override {
+	   packages = pkgs.lib.filter pkgs.lib.isDerivation (pkgs.lib.attrValues pkgs.juliaPackages);
 	 };
 
        in
-	 rWrapper
+	 juliaWrapper
      #+END_SRC
-**** wrapper.nix
+**** DONE wrapper.nix
+     - State "DONE"       from              [2017-08-05 Sat 17:55]
      #+BEGIN_SRC nix :tangle wrapper.nix
-       { stdenv, R, makeWrapper, recommendedPackages, packages }:
+       { stdenv, julia, makeWrapper, recommendedPackages, packages }:
 
        stdenv.mkDerivation {
-	 name = R.name + "-wrapper";
+	 name = julia.name + "-wrapper";
 
-	 buildInputs = [makeWrapper R] ++ recommendedPackages ++ packages;
+	 buildInputs = [makeWrapper julia] ++ recommendedPackages ++ packages;
 
 	 unpackPhase = ":";
 
 	 installPhase = ''
 	   mkdir -p $out/bin
-	   cd ${R}/bin
+	   cd ${julia}/bin
 	   for exe in *; do
-	     makeWrapper ${R}/bin/$exe $out/bin/$exe \
-	       --prefix "R_LIBS_SITE" ":" "$R_LIBS_SITE"
+	     makeWrapper ${julia}/bin/$exe $out/bin/$exe \
+	       --prefix "JULIA_LOAD_PATH" ":" "$JULIA_LOAD_PATH"
 	   done
 	 '';
 
@@ -1050,7 +481,7 @@
      #+END_SRC
 *** compilers
 **** julia
-***** default.nix<R>
+***** TODO default.nix<R>
       #+BEGIN_SRC nix :tangle pkgs/development/compilers/julia/default.nix
 	{ stdenv, fetchurl, bzip2, gfortran, libX11, libXmu, libXt, libjpeg, libpng
 	, libtiff, ncurses, pango, pcre, perl, readline, tcl, texLive, tk, xz, zlib
@@ -1153,8 +584,240 @@
 	  };
 	}
       #+END_SRC
-***** setup-hook.sh
-***** patches
+***** DONE default.nix
+      - State "DONE"       from              [2017-08-05 Sat 19:01]
+      #+BEGIN_SRC nix :tangle pkgs/development/compilers/julia/default.nix
+	{ stdenv, fetchFromGitHub, fetchgit, fetchurl
+	# build tools
+	, gfortran, m4, makeWrapper, patchelf, perl, which, python2, paxctl
+	# libjulia dependencies
+	, libunwind, llvm, readline, utf8proc, zlib
+	# standard library dependencies
+	, curl, fftwSinglePrec, fftw, gmp, libgit2, mpfr, openlibm, openspecfun, pcre2
+	# linear algebra
+	, openblas, arpack, suitesparse
+	# Darwin frameworks
+	, CoreServices, ApplicationServices
+	}:
+
+	with stdenv.lib;
+
+	rec {
+	  juliaGen = {
+	    version, rev, sha256,
+	  } : stdenv.mkDerivation rec {
+	    inherit version rev;
+
+	    name = "julia-${version}";
+
+	    src = fetchFromGitHub {
+	      owner = "JuliaLang";
+	      repo = "julia";
+	      rev = "v${version}";
+	      sha256 = sha256;
+	    };
+
+	    # arpackWithBlas = arpack.override { inherit openblas; };
+	    arpackWithBlas = arpack.overrideAttrs (oldAttrs: rec { inherit openblas; });
+	    suitesparseWithBlas = suitesparse.overrideAttrs (oldAttrs: rec {
+	      inherit openblas; });
+
+	    # dsfmtVersion = "2.2.3";
+	    # dsfmt = fetchurl {
+	    #   url = "http://www.math.sci.hiroshima-u.ac.jp/~m-mat/MT/SFMT/dSFMT-src-${dsfmtVersion}.tar.gz";
+	    #   sha256 = "03kaqbjbi6viz0n33dk5jlf6ayxqlsq4804n7kwkndiga9s4hd42";
+	    # };
+
+	    # libuvVersion = "8d5131b6c1595920dd30644cd1435b4f344b46c8";
+	    # libuv = fetchurl {
+	    #   url = "https://api.github.com/repos/JuliaLang/libuv/tarball/${libuvVersion}";
+	    #   sha256 = "1886r04igcs0k24sbb61wn10f8ki35c39jsnc5djv3rg4hvn9l49";
+	    # };
+
+	    # rmathVersion = "0.1";
+	    # rmath-julia = fetchurl {
+	    #   url = "https://api.github.com/repos/JuliaLang/Rmath-julia/tarball/v${rmathVersion}";
+	    #   sha256 = "0ai5dhjc43zcvangz123ryxmlbm51s21rg13bllwyn98w67arhb4";
+	    # };
+
+	    # virtualenvVersion = "15.0.0";
+	    # virtualenv = fetchurl {
+	    #   url = "mirror://pypi/v/virtualenv/virtualenv-${virtualenvVersion}.tar.gz";
+	    #   sha256 = "06fw4liazpx5vf3am45q2pdiwrv0id7ckv7n6zmpml29x6vkzmkh";
+	    # };
+
+	    with import ./deps;
+
+	    prePatch = ''
+	      mkdir deps/srccache
+	      cp "${dsfmt}" "./deps/srccache/dsfmt-${dsfmtVersion}.tar.gz"
+	      cp "${rmath-julia}" "./deps/srccache/Rmath-julia-${rmathVersion}.tar.gz"
+	      cp "${libuv}" "./deps/srccache/libuv-${libuvVersion}.tar.gz"
+	      cp "${virtualenv}" "./deps/srccache/virtualenv-${virtualenvVersion}.tar.gz"
+	    '';
+
+	    patches = [
+	      ./patches/0001.1-use-system-utf8proc.patch
+	      ./patches/0002-use-system-suitesparse.patch
+	    ] ++ stdenv.lib.optional stdenv.needsPax ./patches/0004-hardened.patch;
+
+	    postPatch = ''
+	      patchShebangs . contrib
+	    '';
+
+	    buildInputs = [
+	      arpackWithBlas fftw fftwSinglePrec gmp libgit2 libunwind mpfr
+	      pcre2.dev openblas openlibm openspecfun readline suitesparseWithBlas utf8proc
+	      zlib llvm
+	    ]
+	    ++ stdenv.lib.optionals stdenv.isDarwin [CoreServices ApplicationServices]
+	    ;
+
+	    nativeBuildInputs = [ curl gfortran m4 makeWrapper patchelf perl python2 which ]
+	      ++ stdenv.lib.optional stdenv.needsPax paxctl;
+
+	    makeFlags =
+	      let
+		arch = head (splitString "-" stdenv.system);
+		march = { "x86_64" = "x86-64"; "i686" = "pentium4"; }."${arch}"
+			or (throw "unsupported architecture: ${arch}");
+		# Julia requires Pentium 4 (SSE2) or better
+		cpuTarget = { "x86_64" = "x86-64"; "i686" = "pentium4"; }."${arch}"
+			    or (throw "unsupported architecture: ${arch}");
+	      in [
+		"ARCH=${arch}"
+		"MARCH=${march}"
+		"JULIA_CPU_TARGET=${cpuTarget}"
+		"PREFIX=$(out)"
+		"prefix=$(out)"
+		"SHELL=${stdenv.shell}"
+
+		"USE_SYSTEM_BLAS=1"
+		"USE_BLAS64=${if openblas.blas64 then "1" else "0"}"
+		"LIBBLAS=-lopenblas"
+		"LIBBLASNAME=libopenblas"
+
+		"USE_SYSTEM_LAPACK=1"
+		"LIBLAPACK=-lopenblas"
+		"LIBLAPACKNAME=libopenblas"
+
+		"USE_SYSTEM_SUITESPARSE=1"
+		"SUITESPARSE_LIB=-lsuitesparse"
+		"SUITESPARSE_INC=-I${suitesparse}/include"
+
+		"USE_SYSTEM_ARPACK=1"
+		"USE_SYSTEM_FFTW=1"
+		"USE_SYSTEM_GMP=1"
+		"USE_SYSTEM_LIBGIT2=1"
+		"USE_SYSTEM_LIBUNWIND=1"
+		# 'replutil' test failure with LLVM 3.8.0, invalid libraries with 3.7.1
+		"USE_SYSTEM_LLVM=1"
+		"USE_SYSTEM_MPFR=1"
+		"USE_SYSTEM_OPENLIBM=1"
+		"USE_SYSTEM_OPENSPECFUN=1"
+		"USE_SYSTEM_PATCHELF=1"
+		"USE_SYSTEM_PCRE=1"
+		"PCRE_CONFIG=${pcre2.dev}/bin/pcre2-config"
+		"PCRE_INCL_PATH=${pcre2.dev}/include/pcre2.h"
+		"USE_SYSTEM_READLINE=1"
+		"USE_SYSTEM_UTF8PROC=1"
+		"USE_SYSTEM_ZLIB=1"
+	      ];
+
+	    NIX_CFLAGS_COMPILE = [ "-fPIC" ];
+
+	    LD_LIBRARY_PATH = makeLibraryPath [
+	      arpackWithBlas fftw fftwSinglePrec gmp libgit2 mpfr openblas openlibm
+	      openspecfun pcre2 suitesparseWithBlas llvm
+	    ];
+
+	    dontStrip = true;
+	    dontPatchELF = true;
+
+	    enableParallelBuilding = true;
+
+	    # doCheck = true;
+	    doCheck = false;
+	    checkTarget = "testall";
+
+	    # Julia's tests require read/write access to $HOME
+	    preCheck = ''
+	      export HOME="$NIX_BUILD_TOP"
+	    '';
+
+	    preBuild = ''
+	      sed -e '/^install:/s@[^ ]*/doc/[^ ]*@@' -i Makefile
+	      sed -e '/[$](DESTDIR)[$](docdir)/d' -i Makefile
+	    '';
+
+	    postInstall = ''
+	      for prog in "$out/bin/julia" "$out/bin/julia-debug"; do
+		  wrapProgram "$prog" \
+		      --prefix LD_LIBRARY_PATH : "$LD_LIBRARY_PATH:$out/lib/julia" \
+		      --prefix PATH : "${stdenv.lib.makeBinPath [ curl ]}"
+	      done
+	    '';
+
+	    setupHook = ./setup-hook.sh;
+
+	    meta = {
+	      description = "High-level performance-oriented dynamical language for technical computing";
+	      homepage = "http://julialang.org/";
+	      license = stdenv.lib.licenses.mit;
+	      maintainers = with stdenv.lib.maintainers; [ raskin ];
+	      platforms = [ "i686-linux" "x86_64-linux" "x86_64-darwin" ];
+	      broken = stdenv.isi686;
+	    };
+	  };
+
+	  myjulia = juliaGen {
+	    version = "0.6.0";
+	    rev = "903644385b91ed8d95e5e3a5716c089dd1f1b08a";
+	    sha256 = "196fw7w9qxx5i7f68ya1s0427i8jfkbh2ysdv0l8q7i726wp0x9i";
+	  };
+	}
+      #+END_SRC
+***** DONE deps.nix
+      - State "DONE"       from              [2017-08-05 Sat 19:02]
+      #+BEGIN_SRC nix :tangle pkgs/development/compilers/julia/deps.nix
+	{
+	  dsfmtVersion = "2.2.3";
+	    dsfmt = fetchurl {
+	      url = "http://www.math.sci.hiroshima-u.ac.jp/~m-mat/MT/SFMT/dSFMT-src-${dsfmtVersion}.tar.gz";
+	      sha256 = "03kaqbjbi6viz0n33dk5jlf6ayxqlsq4804n7kwkndiga9s4hd42";
+	    };
+
+	    libuvVersion = "8d5131b6c1595920dd30644cd1435b4f344b46c8";
+	    libuv = fetchurl {
+	      url = "https://api.github.com/repos/JuliaLang/libuv/tarball/${libuvVersion}";
+	      sha256 = "1886r04igcs0k24sbb61wn10f8ki35c39jsnc5djv3rg4hvn9l49";
+	    };
+
+	    rmathVersion = "0.1";
+	    rmath-julia = fetchurl {
+	      url = "https://api.github.com/repos/JuliaLang/Rmath-julia/tarball/v${rmathVersion}";
+	      sha256 = "0ai5dhjc43zcvangz123ryxmlbm51s21rg13bllwyn98w67arhb4";
+	    };
+
+	    virtualenvVersion = "15.0.0";
+	    virtualenv = fetchurl {
+	      url = "mirror://pypi/v/virtualenv/virtualenv-${virtualenvVersion}.tar.gz";
+	      sha256 = "06fw4liazpx5vf3am45q2pdiwrv0id7ckv7n6zmpml29x6vkzmkh";
+	    };
+	}
+      #+END_SRC
+***** DONE setup-hook.sh
+      - State "DONE"       from              [2017-08-05 Sat 17:54]
+      #+BEGIN_SRC sh
+	addJuliaLoadPath () {
+	    addToSearchPath JULIA_LOAD_PATH $1/src
+	}
+	echo "added $1/julia-packages to load path"
+
+	envHooks+=(addJuliaLoadPath)
+      #+END_SRC
+***** DONE patches
+      - State "DONE"       from              [2017-08-05 Sat 17:53]
       #+BEGIN_SRC diff :tangle pkgs/development/compilers/julia/patches/0001-use-system-utf8proc.patch
 	From 54a66b5728ec98f44a1768f064509be4fd3f2ef6 Mon Sep 17 00:00:00 2001
 	From: Thomas Tuegel <ttuegel@gmail.com>
